# EmptyEpsilon

./: .gitignore  .gitmodules  .tinyci  .travis.yml  CHANGELOG.md  CMakeLists.txt  EmptyEpsilon.cbp  EmptyEpsilon.depend  EmptyEpsilon.layout  EmptyEpsilon.rc  FORK_MAINTENANCE.md  Getting Started  NEW_STATES_PLAN.md  README.md  artemis_mission_convert.py  artemis_mission_convert_template.lua  bebasneue.css  build-windows-on-linux.sh  build.sh  compile_script_docs.py  icons-font.md  icons.css  index.html  io.github.daid.EmptyEpsilon.desktop  io.github.daid.EmptyEpsilon.metainfo.xml  io.github.daid.EmptyEpsilon.metainfo.xml.in  jquery-ui.min.css  logo.icns  main.css  make_cbp.py  options.ini  options.ini.template  prepare.sh  scenario_51_Ardent_s01e01.lua  scenario_52_Ardent_s01e02.lua  scenario_53_Ardent_s01e03.lua  scenario_67_heist.lua  scenario_jump_00.lua  scenario_jump_04.lua  scenario_jump_06.lua  (+10 more)
.github/workflows/: cicd.yml  prerelease.yml
android/: AndroidManifest.xml  Readme.md  build.gradle  build.sh  keystore
android/app/: build.gradle
android/jni/: Android.mk  Application.mk
cmake/: CPackProjectConfig.cmake.in  FindSFML.cmake  android.toolchain  config.h.in  mingw.toolchain
cmake/android/: Activity.java.in  AndroidManifest.xml.in  sdl-remove-lambdas.patch
discordBot/: .gitignore  config.py.template  game.py  main.py
docker/: build.sh
fonts/: 1459282128.eot  bebasneue_bold-webfont.eot  bebasneue_book-webfont.eot  bebasneue_light-webfont.eot  bebasneue_thin-webfont.eot
logs/: index.html
netboot/: README.md  build_netboot_system.sh  config_manager.py
odysseus-config/: README.md  hardware.ini  options.ini  server_options.ini
osx/: MacOSXBundleInfo.plist.in
packs/: Angryfly.pack  License.txt  pack_gen.py
release/: .gitignore  ee_win32_release
resources/: EOC_fighter.mtl  EOC_frigate.mtl  EOC_odysseus.mtl  Machine_Mothership.mtl  Machine_cruiser.mtl  Machine_fighter.mtl  Machine_frigate.mtl  NewMotherShip.mtl  basicShader.frag  basicShader.vert  billboardShader.frag  billboardShader.vert  comms_ship.lua  comms_station.lua  factionInfo.lua  objectShader.frag  objectShaderB.frag  objectShaderBI.frag  objectShaderBS.frag  objectShaderBSI.frag  planetShader.frag  scenario_0_basic.lua  scenario_0_empty.lua  scenario_1_surrounded.lua  scenario_2_battlefield.lua  shipTemplates.lua  space_frigate_6.mtl  space_station_4.mtl  warp.frag
resources/gui/: BebasNeue.theme.txt  colors.ini  default-bebas.theme.txt  default.theme.txt
resources/locale/: cz.mo  cz.po  de.po  en.po  fr.mo  fr.po  it.po  main.cz.po  main.de.po  main.en.po  main.fr.po  main.it.po  main.zh-CN.po  scenario_02_beacon.fr.po  tutorial.cz.mo  tutorial.cz.po  tutorial.de.po  tutorial.en.po  tutorial.fr.po  tutorial.it.po  tutorial.zh-CN.po  tutorial_01_mainscreen.fr.po
resources/music/: source.txt
resources/radar/: artifact.lua
resources/sfx/: source.txt
resources/shaders/: basic.frag  basic.shader  basic.vert  basicColor.frag  basicColor.shader  basicColor.vert  billboard.frag  billboard.shader  billboard.vert  explosionParticle.vert  glitch.frag  glitch.shader  nebula.shader  objectShader.shader  objectShaderB.frag  objectShaderB.vert  objectShaderBI.frag  objectShaderBI.vert  objectShaderBS.frag  objectShaderBS.vert  objectShaderBSI.frag  objectShaderBSI.vert  particles.frag  particles.shader  particles.vert  planet.shader  planetShader.frag  planetShader.vert  spacedust.frag  spacedust.shader  spacedust.vert  starbox.frag  starbox.shader  starbox.vert  warp.shader  wormhole.shader
script_docs/: README.md  main.py  output.html  scriptfunctiondb.py  template.html
scripts/: .gitignore  READ ME - ODYSSEUS.txt  README.md  README_ODYSSEUS.md  Test  border_defend_station.lua  comms.lua  comms_defend.lua  comms_scenario_utility.lua  comms_ship.lua  comms_station.lua  comms_station_scenario_03_central_command.lua  comms_station_scenario_06_central_command.lua  comms_supply_drop.lua  control_code_scenario_utility.lua  cpu_ship_diversification_scenario_utility.lua  defend_station.lua  ee.lua  factionInfo.lua  generate_call_sign_scenario_utility.lua  gtfp_comms_hacked_ship.lua  gtfp_comms_lightbringer.lua  gtfp_comms_nsa.lua  gtfp_comms_sw.lua  inifile.lua  luax.lua  model_data.lua  new_coordinates.lua  odysseus_fleet_load.lua  options.lua  perlin_noise.lua  place_station_scenario_utility.lua  player_ship_upgrade_downgrade_path_scenario_utility.lua  sandbox_library.lua  sandbox_science_database.lua  scenario_00_a.lua  scenario_00_basic.lua  scenario_01_quick_basic.lua  scenario_01_waves.lua  scenario_02_beacon.lua  (+139 more)
scripts/api/: all.lua  callsign.lua  entity.lua  gm.lua  modelData.lua  sector.lua  shipTemplate.lua
scripts/en_US/: factions.lua  scenario_00_basic.lua  scenario_01_waves.lua  scenario_02_beacon.lua  scenario_04_gftp.lua  scenario_07_quick_basic.lua  scenario_50_gaps.lua  scenario_51_deliverAmbassador.lua  scenario_55_defenderHunter.lua  scenario_56_carrierTurret.lua  scenario_57_shoreline.lua  scenario_58_race.lua  scenario_59_border.lua  scenario_60_captureFlag.lua  science_db.lua  ships.lua  tutorial_00_all.lua  tutorial_03_weapons.lua  tutorial_05_science.lua
src/: 0001-Use-server-replicated-mission-clock-add-to-GM.patch  EMPMissile.cpp  EMPMissile.h  GMActions.cpp  GMActions.h  GMMessage.cpp  GMMessage.h  GMScriptCallback.cpp  GMScriptCallback.h  asteroid.cpp  asteroid.h  beamEffect.cpp  beamEffect.h  beamTemplate.cpp  beamTemplate.h  blackHole.cpp  blackHole.h  cargo.cpp  cargo.h  commsScriptInterface.cpp  commsScriptInterface.h  cpuShip.cpp  cpuShip.h  crewCommsUI.cpp  crewCommsUI.h  crewEngineeringUI.cpp  crewEngineeringUI.h  crewHelmsUI.cpp  crewHelmsUI.h  crewPosition.cpp  crewPosition.h  crewScienceUI.cpp  crewScienceUI.h  crewSinglePilotUI.cpp  crewUI.cpp  crewUI.h  crewWeaponsUI.cpp  crewWeaponsUI.h  discord.cpp  discord.h  (+110 more)
tools/subrc/: CMakeLists.txt
tools/subrc/src/: assetProcessor.cpp  assetProcessor.h  imageProcessor.cpp  imageProcessor.h  io.h  log.h  main.cpp  modelProcessor.cpp  modelProcessor.h  packBuilder.cpp  packBuilder.h
www/: index.html
(+1017 files in other folders)
